--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h2>最近の質問</h2>
+<% @questions.each do |question| %>
+  <%= link_to question.body, question_path(question.id) %><br>
+<% end%>
