--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,13 +1,15 @@
 <h2>質問者：<%= @question.user.name %>さん</h2>
-<div><%= @question.body %><div>
-質問日時：<%= @question.created_at.to_s(:datetime) %><br>
+<div>質問内容：<%= @question.body %><div><br>
+質問日時：<%= @question.created_at.to_s(:datetime) %><br><br>
 <% if logged_in? %>
   <div><%= link_to '回答する', new_question_answer_path(@question.id) %>
+<% else %>
+  <div>※ログインすると回答できるようになります。</div>
 <% end %>
 
 <h2>回答 <small><%= @answers.count %>件</small></h2>
 <% @answers.each do |answer| %>
   <h3><%= answer.user.name %>さん</h3>
-  <p>回答日時：<%= answer.created_at.to_s(:datetime) %></p>
-  回答内容：<%= answer.body %>
+  <p>回答内容：<%= answer.body %></p>
+  回答日時：<%= answer.created_at.to_s(:datetime) %>
 <% end %>
