--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,16 @@
 <h2>最近の質問</h2>
 <% @questions.each do |question| %>
-  <%= link_to question.body, question_path(question.id) %><br>
+  <div class="col-md-12">
+    <div class="card mb-4 shadow-sm">
+      <svg class="bd-placeholder-img card-img-top" width="100%" height="15vh"><rect width="100%" height="50%" fill="#55595c"></rect><text x="1%" y="25%" fill="#eceeef" dy=".3em"><%= question.user.name %>さん</text></svg>
+      <div class="card-body">
+        <p class="card-text text-aligin-left" style="margin-left: 1%"><%= question.body %></p>
+        <div class="justify-content-between">
+          <div class="btn-group">
+            <button type="button" class="btn btn-sm btn-outline-secondary"><%= link_to '詳細へ', question_path(question.id) %></button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 <% end%>
