--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Sign up</h1>
+<h1>ユーザー登録</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
@@ -9,19 +9,19 @@
         <% end %>
       <% end %>
       
-      <%= f.label :name %>
-      <%= f.text_field :name %><br>
+      <%= f.label :name, '名前' %>
+      <%= f.text_field :name %><br><br>
 
-      <%= f.label :email %>
-      <%= f.email_field :email %><br>
+      <%= f.label :email, 'メールアドレス' %>
+      <%= f.email_field :email %><br><br>
 
-      <%= f.label :password %>
-      <%= f.password_field :password %><br>
+      <%= f.label :password, 'パスワード' %>
+      <%= f.password_field :password %><br><br>
 
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation %><br>
+      <%= f.label :password_confirmation, 'パスワード確認' %>
+      <%= f.password_field :password_confirmation %><br><br>
 
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
+      <%= f.submit "会員登録", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
