--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,24 +7,41 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/navbar-static/">
+    <link href="/docs/4.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="navbar-top.css" rel="stylesheet">
   </head>
 
   <body class="text-center">
     <header>
-    <h1><%= link_to 'ちえぶくろ', root_path %></h1>
-      <% if flash[:success].present? %>
-        <div style="color: #99E300"><%= flash[:success] %></div>
-      <% end %>
-      <% if flash[:danger].present? %>
-        <div style="color: red"><%= flash[:danger] %></div>
-      <% end %>
-      <% if logged_in? %>
-        <%= link_to 'ログアウト', logout_path, method: :delete %>
-        <%= link_to '質問する', new_question_path %>
-      <% else %>
-        <%= link_to 'ログイン', login_path %>
-        <%= link_to 'ユーザー登録はこちらから', new_user_path %>
-      <% end %>
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+        <h1><%= link_to 'ちえぶくろ', root_path, class: "navbar-brand" %></h1>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <% if flash[:success].present? %>
+            <div style="color: #99E300"><%= flash[:success] %></div>
+          <% end %>
+          <% if flash[:danger].present? %>
+            <div style="color: red"><%= flash[:danger] %></div>
+          <% end %>
+          <ul class="navbar-nav mr-auto">
+            <% if logged_in? %>
+              <li class="nav-item active"><%= link_to "こんにちは！#{current_user.name}さん", root_path, class: "nav-link" %></li>
+              <li class="nav-item active"><%= link_to '質問する', new_question_path, class: "nav-link" %></li>
+              <li class="nav-item active"><%= link_to 'ログアウト', logout_path, method: :delete , class: "nav-link" %></li>
+            <% else %>
+              <li class="nav-item active"><%= link_to 'ログイン', login_path, class: "nav-link" %></li>
+              <li class="nav-item active"><%= link_to 'ユーザー登録はこちらから', new_user_path, class: "nav-link" %></li>
+            <% end %>
+          </ul>
+        </div>
+        <form class="form-inline mt-2 mt-md-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </nav>
     </header>
     <%= yield %>
   </body>
