--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,8 +1,18 @@
 <h2>質問者：<%= @question.user.name %>さん</h2>
 <div>質問内容：<%= @question.body %><div><br>
-質問日時：<%= @question.created_at.to_s(:datetime) %><br><br>
+質問日時：<%= @question.created_at.to_s(:datetime) %>
+<% if @question.favorited?(current_user) %>
+  <%= link_to question_favorites_path(@question.id), method: :delete do %>
+    <span style="color: red">❤︎</span>
+  <% end %>
+<% else %>
+  <%= link_to question_favorites_path(@question.id), method: :post do %>
+    <span>❤︎</span>
+  <% end %>
+<% end %>
+いいね<%= @favorites.count %>件
 <% if logged_in? %>
-  <div><%= link_to '回答する', new_question_answer_path(@question.id) %>
+  <div><%= link_to '回答する', new_question_answers_path(@question.id) %>
 <% else %>
   <div>※ログインすると回答できるようになります。</div>
 <% end %>
