--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,7 +49,6 @@ a:hover {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-direction: column;
-  flex-direction: column;
   line-height: 100px;
   list-style: none;
   float: left;
@@ -63,6 +62,12 @@ a:hover {
 
 .search-field {
   display: inline-flex;
+}
+
+.nav-right {
+  display: flex;
+  position: absolute;
+  right: 1%;
 }
 
 .bg-dark {
