いいねのデザインとか

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,27 +1,40 @@
-<h2>質問者：<%= @question.user.name %>さん</h2>
-<div>質問内容：<%= @question.body %><div><br>
-質問日時：<%= @question.created_at.to_s(:datetime) %>
-<% if logged_in? %>
-  <% if @question.favorited?(current_user) %>
-    <%= link_to question_favorites_path(@question.id), method: :delete do %>
-      <i class="far fa-heart" style="color: red"></i>
+<div class="col-md-12">
+  <div class="card mb-4 shadow-sm">
+    <svg class="bd-placeholder-img card-img-top" width="100%" height="15vh"><rect width="100%" height="50%" fill="#55595c"></rect><text x="1%" y="25%" fill="#eceeef" dy=".3em"><%= @question.user.name %>さん <%= @question.created_at.to_s(:datetime) %></text></svg>
+    <div class="card-body">
+      <p class="card-text text-aligin-left" style="margin-left: 1%"><%= @question.body %></p>
+      <% if logged_in? %>
+        いいね<%= @question.favorites.count %>件
+        <% if @question.favorited?(current_user) %>
+          <%= link_to question_favorites_path(@question.id), method: :delete do %>
+            <i class="far fa-heart" style="color: red"></i>
+          <% end %>
+        <% else %>
+          <%= link_to question_favorites_path(@question.id), method: :post do %>
+            <i class="far fa-heart" style="color: gray"></i>
+          <% end %>
+        <% end %>
+        <% if current_user.eql?(@question.user) %>
+         <%= link_to '削除する', question_path(@question.id), method: :delete, data: { confirm: '本当に削除しますか？' } %>
+        <% end %>
+      <% end %>
+    </div>
+    <% if logged_in? %>
+      <%= link_to '回答する', new_question_answers_path(@question.id), class: "btn btn-primary", style: "margin: 1% 1%" %>
+    <% else %>
+      <div>※ログインすると回答できるようになります。</div>
     <% end %>
-  <% else %>
-    <%= link_to question_favorites_path(@question.id), method: :post do %>
-      <i class="far fa-heart" style="color: gray"></i>
-    <% end %>
-  <% end %>
-<% end %>
-いいね<%= @question.favorites.count %>件
-<% if logged_in? %>
-  <div><%= link_to '回答する', new_question_answers_path(@question.id) %>
-<% else %>
-  <div>※ログインすると回答できるようになります。</div>
-<% end %>
+  </div>
+</div>
 
 <h2>回答 <small><%= @answers.count %>件</small></h2>
 <% @answers.each do |answer| %>
-  <h3><%= answer.user.name %>さん</h3>
-  <p>回答内容：<%= answer.body %></p>
-  回答日時：<%= answer.created_at.to_s(:datetime) %>
+  <div class="col-md-12">
+    <div class="card mb-4 shadow-sm">
+      <svg class="bd-placeholder-img card-img-top" width="100%" height="15vh"><rect width="100%" height="50%" fill="#55595c"></rect><text x="1%" y="25%" fill="#eceeef" dy=".3em"><%= answer.user.name %>さん <%= answer.created_at.to_s(:datetime) %></text></svg>
+      <div class="card-body">
+        <p class="card-text text-aligin-left" style="margin: 0 1% 3% 1%"><%= answer.body %></p>
+      </div>
+    </div>
+  </div>
 <% end %>
