--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-12">
   <div class="card mb-4 shadow-sm">
-    <svg class="bd-placeholder-img card-img-top" width="100%" height="15vh"><rect width="100%" height="50%" fill="#55595c"></rect><text x="1%" y="25%" fill="#eceeef" dy=".3em"><%= @question.user.name %>さん <%= @question.created_at.to_s(:datetime) %></text></svg>
+    <svg class="bd-placeholder-img card-img-top" width="100%" height="10vh"><rect width="100%" height="60%" fill="#55595c"></rect><text x="1%" y="25%" fill="#eceeef" dy=".3em"><%= @question.user.name %>さん <%= @question.created_at.to_s(:datetime) %></text></svg>
     <div class="card-body">
       <p class="card-text text-aligin-left" style="margin-left: 1%"><%= @question.body %></p>
       <% if logged_in? %>
@@ -20,7 +20,10 @@
       <% end %>
     </div>
     <% if logged_in? %>
-      <%= link_to '回答する', new_question_answers_path(@question.id), class: "btn btn-primary", style: "margin: 1% 1%" %>
+      <% if current_user == @question.user %>
+      <% else %>
+        <%= link_to '回答する', new_question_answers_path(@question.id), class: "btn btn-primary", style: "margin: 1% 1%" %>
+      <% end %>
     <% else %>
       <div>※ログインすると回答できるようになります。</div>
     <% end %>
@@ -31,7 +34,7 @@
 <% @answers.each do |answer| %>
   <div class="col-md-12">
     <div class="card mb-4 shadow-sm">
-      <svg class="bd-placeholder-img card-img-top" width="100%" height="15vh"><rect width="100%" height="50%" fill="#55595c"></rect><text x="1%" y="25%" fill="#eceeef" dy=".3em"><%= answer.user.name %>さん <%= answer.created_at.to_s(:datetime) %></text></svg>
+      <svg class="bd-placeholder-img card-img-top" width="100%" height="10vh"><rect width="100%" height="60%" fill="#55595c"></rect><text x="1%" y="25%" fill="#eceeef" dy=".3em"><%= answer.user.name %>さん <%= answer.created_at.to_s(:datetime) %></text></svg>
       <div class="card-body">
         <p class="card-text text-aligin-left" style="margin: 0 1% 3% 1%"><%= answer.body %></p>
       </div>
