--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,15 +4,10 @@
     <% @questions.each do |question| %>
       <div class="col-md-12">
         <div class="card mb-4 shadow-sm">
-          <svg class="bd-placeholder-img card-img-top" width="100%" height="15vh"><rect width="100%" height="50%" fill="#55595c"></rect><text x="1%" y="25%" fill="#eceeef" dy=".3em"><%= question.user.name %>さん</text></svg>
+          <svg class="bd-placeholder-img card-img-top" width="100%" height="10vh"><rect width="100%" height="60%" fill="#55595c"></rect><text x="1%" y="25%" fill="#eceeef" dy=".3em"><%= question.user.name %>さん</text></svg>
           <div class="card-body">
-            <p class="card-text text-aligin-left" style="margin-left: 1%"><%= question.body %></p>
-            <i class="far fa-heart text-aligin-left" style="color: gray; width: 99%"><%= question.favorites.count %></i>
-            <div class="justify-content-between">
-              <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary"><%= link_to '詳細へ', question_path(question.id) %></button>
-              </div>
-            </div>
+            <p class="card-text text-aligin-left" style="margin-left: 1%"><%= link_to question.body, question_path(question.id) %></p>
+            <i class="far fa-heart text-aligin-left" style="color: gray; width: 99%; margin-left: 1%"><%= question.favorites.count %></i>
           </div>
         </div>
       </div>
@@ -21,25 +16,20 @@
 </div>
 <div class="right">
   <div class="col-md-4">
-    <%= image_tag 'Unknown.jpeg' %>
+    <%=  image_tag 'Unknown.jpeg', style: "width: 100%" %>
   </div>
   <div class="col-md-4">
-    <%= image_tag 'Unknown.jpeg' %>
+    <%= image_tag 'Unknown.jpeg', style: "width: 100%" %>
   </div>
   <div class="col-md-4">
     <h3>いいねが多い質問</h3>
     <% @favorited_questions.first(5).each do |fq| %>
       <div class="col-md-12">
         <div class="card mb-4 shadow-sm">
-          <svg class="bd-placeholder-img card-img-top" width="100%" height="15vh"><rect width="100%" height="50%" fill="#55595c"></rect><text x="1%" y="25%" fill="#eceeef" dy=".3em"><%= Question.find(fq.first).user.name %>さん</text></svg>
+          <svg class="bd-placeholder-img card-img-top" width="100%" height="10vh"><rect width="100%" height="60%" fill="#55595c"></rect><text x="1%" y="25%" fill="#eceeef" dy=".3em"><%= Question.find(fq.first).user.name %>さん</text></svg>
           <div class="card-body">
-            <p class="card-text text-aligin-left" style="margin-left: 1%"><%= Question.find(fq.first).body %></p>
-            <i class="far fa-heart text-aligin-left" style="color: gray; width: 99%"><%= Question.find(fq.first).favorites.count %></i>
-            <div class="justify-content-between">
-              <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary"><%= link_to '詳細へ', question_path(Question.find(fq.first).id) %></button>
-              </div>
-            </div>
+            <p class="card-text text-aligin-left" style="margin-left: 1%"><%= link_to Question.find(fq.first).body, question_path(fq.first) %></p>
+            <i class="far fa-heart text-aligin-left" style="color: gray; width: 99%; margin-left: 1%"><%= Question.find(fq.first).favorites.count %></i>
           </div>
         </div>
       </div>
