--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -2,15 +2,10 @@
 <% @questions.each do |question| %>
   <div class="col-md-12">
     <div class="card mb-4 shadow-sm">
-      <svg class="bd-placeholder-img card-img-top" width="100%" height="15vh"><rect width="100%" height="50%" fill="#55595c"></rect><text x="1%" y="25%" fill="#eceeef" dy=".3em"><%= question.user.name %>さん</text></svg>
+      <svg class="bd-placeholder-img card-img-top" width="100%" height="10vh"><rect width="100%" height="60%" fill="#55595c"></rect><text x="1%" y="25%" fill="#eceeef" dy=".3em"><%= question.user.name %>さん</text></svg>
       <div class="card-body">
-        <p class="card-text text-aligin-left" style="margin-left: 1%"><%= question.body %></p>
-        <i class="far fa-heart text-aligin-left" style="color: gray; width: 99%"><%= question.favorites.count %></i>
-        <div class="justify-content-between">
-          <div class="btn-group">
-            <button type="button" class="btn btn-sm btn-outline-secondary"><%= link_to '詳細へ', question_path(question.id) %></button>
-          </div>
-        </div>
+        <p class="card-text text-aligin-left" style="margin-left: 1%"><%= link_to question.body, question_path(question.id) %></p>
+        <i class="far fa-heart text-aligin-left" style="color: gray; width: 99%; margin-left: 1%"><%= question.favorites.count %></i>
       </div>
     </div>
   </div>
