--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-12">
   <div class="card mb-4 shadow-sm">
-    <svg class="bd-placeholder-img card-img-top" width="100%" height="10vh"><rect width="100%" height="60%" fill="#55595c"></rect><text x="1%" y="25%" fill="#eceeef" dy=".3em"><%= @question.user.name %>さん <%= @question.created_at.to_s(:datetime) %></text></svg>
+    <svg class="bd-placeholder-img card-img-top" width="100%" height="14vh"><rect width="100%" height="60%" fill="#55595c"></rect><text x="1%" y="25%" fill="#eceeef" dy=".3em"><%= link_to @question.user.name, user_path(@question.user.id), fill: "white" %>さん <%= @question.created_at.to_s(:datetime) %></text></svg>
     <div class="card-body">
       <p class="card-text text-aligin-left" style="margin-left: 1%"><%= @question.body %></p>
       <% if logged_in? %>
