--- a/app/views/answers/new.html.erb
+++ b/app/views/answers/new.html.erb
@@ -2,15 +2,15 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for @answer, url: question_answers_path do |f| %>
+    <%= form_for @answer, url: question_answers_confirm_path do |f| %>
       <% if @answer.errors.any? %>
         <% @answer.errors.full_messages.each do |msg| %>
           <div style="color: red"><%= msg %></div>
         <% end %>
       <% end %>
       
-      <%= f.label :body %>
-      <%= f.text_field :body %><br>
+      <%= f.label :body, class: "sr-only" %>
+      <%= f.text_area :body, class: "form-control", placeholder: "回答内容", style: "width: 80%; height: 30vh" %>
 
       <%= f.submit "回答する", class: "btn btn-primary" %>
     <% end %>
