--- a/app/views/mypage/index.html.erb
+++ b/app/views/mypage/index.html.erb
@@ -32,7 +32,7 @@
       </div>
       <div class="list">
         <div class="question">
-          <h3>質問</h2>
+          <h3>投稿した質問</h2>
           <% if @questions.present? %>
             <% @questions.each do |question| %>
               <div class="col-md-12">
