--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,23 @@ header {
   background-color: #343a40;
 }
 
+a {
+  text-decoration: none;
+}
+
+p {
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+}
+
+ul {
+  margin-block-start: 0em;
+}
+
+li {
+  list-style: none;
+}
+
 main {
   width: 80%;
   margin: auto;
@@ -52,6 +69,10 @@ a:hover {
   color: #fff;
 }
 
+#nav-smartphone {
+  display: none;
+}
+
 .navbar-brand {
   display: inline-block;
   padding-top: .3125rem;
@@ -68,6 +89,11 @@ a:hover {
   list-style: none;
   float: left;
   width: 100%;
+}
+
+.navbar-expand-md .navbar-nav .nav-link {
+  padding-right: .5rem;
+  padding-left: .5rem;
 }
 
 .nav-second {
@@ -164,23 +190,45 @@ a:hover {
 
 
 
-@media (min-width: 768px) {
-  .navbar-expand-md .navbar-nav {
-    -ms-flex-direction: row;
-    flex-direction: row;
+@media (max-width: 768px) {
+  
+  #menu-logo {
+    padding-top: 10px;
+    text-align: right;
+    cursor: pointer;
   }
   
-  .navbar-expand-md .navbar-nav .nav-link {
-    padding-right: .5rem;
-    padding-left: .5rem;
+  .menu {
+    color: white;
+    line-height: 5px;
+    font-size: large;
   }
   
-  .navbar-expand-md .navbar-toggler {
+  .nav-second {
+    border: 0;
+  }
+  
+  .nav-right, .nav-left {
     display: none;
   }
+  
+  .nav-item {
+    width: 99%;
+  }
+  
+  .nav-slide {
+    a {
+      color: white;
+    }
+    
+    .nav-item {
+      margin-bottom: 20px;
+    }
+  }
+  
 }
 
-@media (min-width: 576px) {
+@media (max-width: 576px) {
   .mr-sm-2, .mx-sm-2 {
     
   }
