--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -19,6 +19,7 @@
         <% end %>
       <% end %>
     </div>
+    <br>
     <% if logged_in? %>
       <% if current_user == @question.user %>
       <% else %>
@@ -26,6 +27,9 @@
       <% end %>
     <% else %>
       <div>※ログインすると回答できるようになります。</div>
+      <div>
+        <%= link_to 'ログイン', login_path %> または <%= link_to '新規会員登録', new_user_path %>
+      </div>
     <% end %>
   </div>
 </div>
