--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag 'users', :media => "all" %>
 <h1>ユーザー登録</h1>
 
 <div class="row">
@@ -26,6 +27,6 @@
 
     <%= f.select :age, {'10代': 10, '20代': 20, '30代': 30, '40代': 40, '50代': 50, '60代': 60}, { include_blank: '年代' }, { class: 'form-control' } %>
         
-    <%= f.submit "登録", class: "btn btn-lg btn-primary btn-block", style: "width: 20%; margin: auto" %>
+    <%= f.submit "登録", class: "btn btn-lg btn-primary btn-block", style: "margin: auto" %>
   <% end %>
 </div>
