--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,8 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/navbar-static/">
     <link href="/docs/4.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="navbar-top.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css">
+    <!-- ↓こいつをつけないとスマホ版でレスポンシブ効かない -->
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport" />
   </head>
 
@@ -49,7 +49,7 @@
               <% else %>
                 <li class="nav-item active">><%= link_to '質問一覧', questions_path, class: "nav-link" %></li>
                 <li class="nav-item active"><%= link_to 'ログイン', login_path, class: "nav-link" %></li>
-                <li class="nav-item active"><%= link_to 'ユーザー登録はこちらから', new_user_path, class: "nav-link" %></li>
+                <li class="nav-item active"><%= link_to 'ユーザー登録', new_user_path, class: "nav-link" %></li>
               <% end %>
             </div>
           </ul>
@@ -65,7 +65,7 @@
               <% else %>
                 <li class="nav-item active"><%= link_to '質問一覧', questions_path, class: "nav-link" %></li>
                 <li class="nav-item active"><%= link_to 'ログイン', login_path, class: "nav-link" %></li>
-                <li class="nav-item active"><%= link_to 'ユーザー登録はこちらから', new_user_path, class: "nav-link" %></li>
+                <li class="nav-item active"><%= link_to 'ユーザー登録', new_user_path, class: "nav-link" %></li>
               <% end %>
             </div>
           </ul>
