--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,12 +10,22 @@
       <div class="col-md-8 right">
         <h4><%= @user.name %>さん</h4><br>
         <div class="profile-place">プロフィール</div><br>
-        <% if @user.age.present? %>
-          <div class="key-value">
+        <div class="key-value">
           <div class="key">年齢：</div>
-          <div class="value"><%= @user.age %>代</div>
-          </div><br>
-        <% end %>
+          <% if @user.age.present? %>
+            <div class="value"><%= @user.age %>代</div>
+          <% else %>
+            <div class="value">未選択</div>
+          <% end %>
+        </div><br>
+        <div class="key-value">
+          <div class="key">性別：</div>
+          <% if @user.sex.present? %>
+            <div class="value"><%= @user.sex.text %></div>
+          <% else %>
+            <div class="value">未選択</div>
+          <% end %>
+        </div><br>
         <div class="key-value">
           <div class="key">メール：</div>
           <div class="value"><%= @user.email %></div>
